Fix portrait image not overflowing properly

--- a/_sass/pd-styles/_pd-file-preview.scss
+++ b/_sass/pd-styles/_pd-file-preview.scss
@@ -39,6 +39,7 @@
 }
 
 .pd-file-preview-image {
+	@extend .covered-absolute;
 	@extend .mauto;
 	object-fit: cover;
 	max-width: none;
